# water-time

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/id/ac/ui/cs/mobileprogramming/sitiauliarahmatussyifa/watertime/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  watercalc-jni.cpp
app/src/main/java/id/ac/ui/cs/mobileprogramming/sitiauliarahmatussyifa/watertime/: BootUpReceiver.java  CalculatorActivity.java  CreateEvent.java  FirstFragment.java  MainActivity.java  NewLogActivity.java  NotificationMessage.java  NotifierAlarm.java  ProfileActivity.java  ReminderActivity.java  SecondFragment.java
app/src/main/res/layout/: activity_main.xml  add_log.xml  add_profile.xml  add_reminder.xml  content_main.xml  fragment_first.xml  fragment_second.xml  log_item.xml  notification_message.xml  popup.xml  profile_layout.xml  reminder.xml  reminder_item.xml  water_calculator.xml
app/src/main/res/layout-land/: activity_main.xml  add_reminder.xml  content_main.xml  reminder.xml
app/src/main/res/menu/: menu_add_log.xml  menu_main.xml  menu_save_profile.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  ic_watertime_background.xml  strings.xml  styles.xml
app/src/main/res/values-in-rID/: strings.xml
app/src/test/java/id/ac/ui/cs/mobileprogramming/syifa/watertime/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+19 files in other folders)
